# pidigits

./: Makefile  README.md
src/: CMakeLists.txt  main.b.cpp  main.cpp  main.t.cpp  pidigits.hpp
